# notion-river

./: .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md  config.example.toml  notion-river-session  notion-river.desktop  notion-river.spec  river.spec  test.sh
.github/workflows/: ci.yml  package.yml
config-examples/: autostart  kanshi.config  kanshi.service  notion-cycle-workspace  notion-river.spec  notion-river.toml  notion-rofi-window-mode  notion-volume  river-init  start-river
config-examples/waybar/: config.jsonc  style.css
config-examples/xkb/rules/: evdev
config-examples/xkb/symbols/: custom
debian/: changelog  control  copyright  rules
src/: actions.rs  app_bindings.rs  bindings.rs  config.rs  control.rs  decorations.rs  dispatch.rs  focus.rs  ipc.rs  layout.rs  main.rs  output_profiles.rs  pointer_ops.rs  protocol.rs  rendering.rs  state.rs  window_actions.rs  wm.rs  workspace.rs
